tests/mm0_mmu/fail/bad-sort2431.mmu
-- bad modifier order
(sort s2431 strict free provable pure)